--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -5,7 +5,6 @@ fra:
       account_create: 'Créer un nouveau compte'
       account_mark: 'Lettrage du compte : %{number} - %{name}'
       account_update: 'Modifier le compte : %{number} - %{name}'
-      accountize: 'Bascule comptable'
       accounts: 'Plan de comptes'
       accounts_load: 'Charger un plan de compte'
       balance: 'Balance'
@@ -14,8 +13,9 @@ fra:
       bank_statement_point: 'Pointer le relevé N°%{number}'
       bank_statement_update: 'Modifier le relevé N°%{number}'
       bank_statements: 'Relevés de compte bancaire'
+      bookkeep: 'Bascule comptable'
       document_print: 'Impression, exportation'
-      draft_entry_lines: 'Brouillard'
+      draft: 'Brouillard'
       financial_year: 'Exercice comptable %{code}'
       financial_year_close: 'Clôture d''exercice'
       financial_year_create: 'Créer un nouvel exercice'
@@ -494,7 +494,7 @@ fra:
     download_firefox: 'Télécharger Mozilla Firefox...'
     downpayment: 'Acompte'
     draft: 'Brouillard'
-    draft_entry_lines: 'Brouillard'
+    draft: 'Brouillard'
     duplicate: 'Dupliquer'
     duration: 'Durée'
     duration_in_hours_and_minutes: '%{hours}h %{minutes}min'
@@ -601,7 +601,7 @@ fra:
     journal_record_update: 'Modifier la pièce'
     journal_update: 'Modifier le journal'
     journal_view:
-      draft_entry_lines: 'Brouillard'
+      draft: 'Brouillard'
       entries: 'Écritures'
       entry_lines: 'Lignes d''écritures'
       mixed: 'Écritures et lignes'
@@ -651,8 +651,8 @@ fra:
     meeting: 'Lieu(x) de rencontre'
     menu:
       accountancy_tasks: 'Travaux comptables'
-      accountize: 'Bascule comptable'
       bank_statements: 'Relevés de compte'
+      bookkeep: 'Bascule comptable'
       documents: 'Documents'
       financial_operations: 'Opérations financières'
       informations: 'Informations'
@@ -905,7 +905,7 @@ fra:
     save_in_draft: 'Sauvegarder dans le brouillard'
     scheduled: 'Échéance'
     search: 'Rechercher'
-    #>search_account: 'Search account'
+    search_account: 'Rechercher un compte'
     search_go: 'Lancer la recherche'
     search_sales: 'Rechercher des ventes'
     second_contact: 'Adresse secondaire'
@@ -1114,9 +1114,9 @@ fra:
     yearly: 'Annuelle'
   notifications:
     access_denied: 'Vous n''avez pas le droit d''accéder à cette page. %{reason} (%{url})'
-    accountizing_is_finished: 'La bascule en comptabilité est finie.'
-    accountizing_works_only_with: 'La bascule en comptabilité ne peut se faire actuellement que pour : %{list}.'
     bad_file: 'Le fichier ne semble pas correspondre.'
+    bookkeeping_is_finished: 'La bascule en comptabilité est finie.'
+    bookkeeping_works_only_with: 'La bascule en comptabilité ne peut se faire actuellement que pour : %{list}.'
     cannot_delete_entity: 'Il n''est pas possible de supprimer cette fiche car elle possède un historique comptable'
     cannot_merge_an_entity_with_itself: 'Il n''est pas possible de fusionner une fiche avec elle-même'
     cannot_merge_entities: 'Une erreur est survenue. Il n''est pas possible de fusionner ces fiches.'
@@ -1176,6 +1176,7 @@ fra:
     password_successfully_changed: 'Votre mot de passe a été mis à jour avec succès'
     prices_import_succeeded: 'Vos données ont été correctement importées'
     print_failure: 'Impossible d''imprimer. Essayer de recharger les modèles de documents pour corriger le problème. %{error} (%{class}).'
+    purchase_order_already_invoiced: 'Achat déjà facturé'
     record_cannot_be_removed: 'L''enregistrement ne peut pas être supprimé'
     record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement'
     record_has_not_been_removed: 'L''enregistrement n''a pas être supprimé correctement'
@@ -1183,7 +1184,7 @@ fra:
     sales_order_already_invoiced: 'La vente a déjà été facturée: vous ne pouvez pas définir de livraison'
     sales_order_cannot_be_updated: 'Le devis n''est plus modifiable.'
     sales_order_cant_be_deleted: 'La vente ne peut plus être supprimée'
-    select_entries_to_letter_together: 'Sélectionnez des écritures à lettrer ensemble'
+    select_entries_to_mark_together: 'Sélectionnez des écritures à lettrer ensemble'
     specify_filter: 'Vous choisir appliquer au moins un filtre de recherche'
     specify_updates: 'Vous devez spécifier au moins un champ à modifier'
     unavailable_model: '%{model} indisponible ou inexistante (%{id})'
@@ -1200,63 +1201,42 @@ fra:
     you_must_select_a_file_to_import: 'Vous devez sélectionner un fichier à importer'
     you_will_lose_all_your_current_data: 'Si vous continuez, vous allez perdre toutes vos données en cours de saisie. Voulez-vous poursuivre ?'
   preferences:
-    accountancy:
-      accountize:
-        automatic: 'Activer la bascule automatique des données comptables'
-        detail_payments_in_deposits: 'Détailler la liste des règlements lors de la comptabilisation d''une remise en banque'
-        draft_mode: 'Enregistrer les pièces dans le brouillard lors de la bascule automatique'
-      accounts:
-        capital_gains: 'Résultat de l''exercice (bénéfice)'
-        capital_losses: 'Résultat de l''exercice (perte)'
-        charges: 'Comptes de charges'
-        financial_banks: 'Comptes de banque'
-        financial_cashes: 'Comptes de caisse'
-        financial_internal_transfers: 'Virements internes'
-        financial_payments_to_deposit: 'Règlements à encaisser'
-        products: 'Comptes de produits'
-        taxes_acquisition: 'Compte des taxes d''acquisitions intracommunautaires'
-        taxes_assimilated: 'Compte des taxes assimilées'
-        taxes_balance: 'Compte de taxe net '
-        taxes_collected: 'Compte des taxes collectées'
-        taxes_paid: 'Compte des taxes déductibles'
-        taxes_payback: 'Compte de taxes de remboursement'
-        third_attorneys: 'Comptes mandataires'
-        third_clients: 'Comptes clients'
-        third_suppliers: 'Comptes fournisseurs'
-      cash_transfers:
-        numeration: 'Numérotation des virements internes'
-      entities:
-        use_code_for_account_numbers: 'Utiliser le code personne pour composer les numéros de compte'
-      journals:
-        bank: 'Journal de banque par défaut'
-        cash: 'Journal de caisse par défaut'
-        forward: 'Journal des reports à nouveau par défaut'
-        purchases: 'Journal des achats par défaut'
-        sales: 'Journal des ventes par défaut'
-        various: 'Journal des opérations diverses par défaut'
-    general:
-      language: 'Langue par défaut'
-    management:
-      deposits:
-        days_before_warning_undone: 'Nombre de jours avant de prévenir pour les encaissements non effectués'
-        days_before_warning_unvalidated: 'Nombre de jours nécessaire pour pour pouvoir valider une remise en banque'
-        numeration: 'Numérotation des remises en banque'
-      incoming_deliveries:
-        numeration: 'Numérotation des livraisons entrantes'
-      incoming_payments:
-        numeration: 'Numérotation des encaissements'
-      outgoing_deliveries:
-        numeration: 'Numérotation des livraisons sortantes'
-      outgoing_payments:
-        numeration: 'Numérotation des décaissements'
-      purchase_orders:
-        numeration: 'Numérotation des achats'
-      sales_invoices:
-        numeration: 'Numérotation des factures'
-      sales_orders:
-        numeration: 'Numérotation des ventes'
-      subscriptions:
-        numeration: 'Numérotation des abonnements'
-    relations:
-      entities:
-        numeration: 'Numérotation des fiches clients/fournisseurs'
+    bank_journal: 'Journal de banque par défaut'
+    bookkeep_automatically: 'Activer la bascule automatique des données comptables'
+    bookkeep_in_draft: 'Enregistrer les pièces dans le brouillard lors de la bascule automatique'
+    capital_gains_accounts: 'Résultat de l''exercice (bénéfice)'
+    capital_losses_accounts: 'Résultat de l''exercice (perte)'
+    cash_journal: 'Journal de caisse par défaut'
+    cash_transfers_sequence: 'Numérotation des virements internes'
+    charges_accounts: 'Comptes de charges'
+    deposits_sequence: 'Numérotation des remises en banque'
+    detail_payments_in_deposit_bookkeeping: 'Détailler la liste des règlements lors de la comptabilisation d''une remise en banque'
+    entities_sequence: 'Numérotation des fiches clients/fournisseurs'
+    financial_banks_accounts: 'Comptes de banque'
+    financial_cashes_accounts: 'Comptes de caisse'
+    financial_internal_transfers_accounts: 'Virements internes'
+    financial_payments_to_deposit_accounts: 'Règlements à encaisser'
+    forward_journal: 'Journal des reports à nouveau par défaut'
+    incoming_deliveries_sequence: 'Numérotation des livraisons entrantes'
+    incoming_payments_sequence: 'Numérotation des encaissements'
+    outgoing_deliveries_sequence: 'Numérotation des livraisons sortantes'
+    outgoing_payments_sequence: 'Numérotation des décaissements'
+    products_accounts: 'Comptes de produits'
+    purchase_orders_sequence: 'Numérotation des achats'
+    purchases_journal: 'Journal des achats par défaut'
+    sales_invoices_sequence: 'Numérotation des factures'
+    sales_journal: 'Journal des ventes par défaut'
+    sales_orders_sequence: 'Numérotation des ventes'
+    subscriptions_sequence: 'Numérotation des abonnements'
+    taxes_acquisition_accounts: 'Compte des taxes d''acquisitions intracommunautaires'
+    taxes_assimilated_accounts: 'Compte des taxes assimilées'
+    taxes_balance_accounts: 'Compte de taxe net '
+    taxes_collected_accounts: 'Compte des taxes collectées'
+    taxes_paid_accounts: 'Compte des taxes déductibles'
+    taxes_payback_accounts: 'Compte de taxes de remboursement'
+    third_attorneys_accounts: 'Comptes mandataires'
+    third_clients_accounts: 'Comptes clients'
+    third_suppliers_accounts: 'Comptes fournisseurs'
+    transports_sequence: 'Numérotation des transports'
+    use_entity_codes_for_account_numbers: 'Utiliser le code personne pour composer les numéros de compte'
+    various_journal: 'Journal des opérations diverses par défaut'
