--- a/config/locales/arb/rights.yml
+++ b/config/locales/arb/rights.yml
@@ -1,8 +1,8 @@
 arb:
   rights:
-    accountize: 'مبادلة الاجراءات التجارية للمحاسبة'
     administrate_accountancy: 'مدخل لوحدة المحاسبة' #!
     backup_company: 'تطبيق / تحديث النسخ الاحتياطية'
+    bookkeep: 'مبادلة الاجراءات التجارية للمحاسبة'
     #>build_production_chains: 'Build production chains'
     cancel_sales_invoices: 'الاحذ بالموجودات'
     change_prices_on_sales_orders: 'تغيير اسعار البيع'
