--- a/config/locales/eng/rights.yml
+++ b/config/locales/eng/rights.yml
@@ -2,8 +2,8 @@ eng:
   rights:
     __minimum__: 'Access to the minimum'
     __not_used__: 'Inaccessible'
-    accountize: 'Transfer commercial data in accountancy'
     backup_company: 'Make and reload backups'
+    bookkeep: 'Transfer commercial data in accountancy'
     build_production_chains: 'Build production chains'
     cancel_sales_invoices: 'Cancel sales_invoices'
     change_prices_on_sales_orders: 'Change prices on sales'
